deployment/kubernetes/stateful-services/ftgo-mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ftgo-mysql
  labels:
    name: ftgo-mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None
  selector:
    role: ftgo-mysql
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: ftgo-mysql
spec:
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        role: ftgo-mysql
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: ftgo-mysql
          image: msapatterns/mysql:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          args:
              - "--ignore-db-dir=lost+found"
          ports:
              - containerPort: 3306
          volumeMounts:
            - name: ftgo-mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: ftgo-mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
