deployment/kubernetes/stateful-services/ftgo-postgres-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ftgo-postgres
  labels:
    name: ftgo-postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    role: ftgo-postgres
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: ftgo-postgres
spec:
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        role: ftgo-postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ftgo-postgres
          image: postgres:13-alpine
          imagePullPolicy: Always
          ports:
              - containerPort: 5432
          volumeMounts:
            - name: ftgo-postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: ftgo-postgres-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
